--- a/configs/config_vars.docker.yaml
+++ b/configs/config_vars.docker.yaml
@@ -6,4 +6,4 @@ is_testing: false
 
 server-port: 8080
 
-dbconnection: 'postgresql://user:password@service-postgres3:5432/task-tracker_db-1'
+dbconnection: 'postgresql://user:password@service-postgres:5432/task-tracker_db-1'
