--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "2.3"
 
 services:
     postgres:
-        container_name: service-postgres3
+        container_name: service-postgres
         image: postgres:12
         environment:
           - POSTGRES_DB=task-tracker_db-1
